--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.2
 marshmallow==4.0.0
+mysqlclient==2.2.7
+PyMySQL==1.1.1
 python-dotenv==1.1.0
 pytz==2025.2
 six==1.17.0
