--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,7 @@ run.py
 ovload.py
 .venv/*
 log*
- **/__pycache__/
+__pycache__/*
+migrations/__pycache__/*
+src/__pycache__/*
+src/models/__pycache__/*
