--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,24 @@
 alembic==1.16.2
 aniso8601==10.0.1
 blinker==1.9.0
+cffi==1.17.1
 click==8.2.1
+cryptography==45.0.4
 Flask==3.1.1
+Flask-JWT-Extended==4.7.1
 Flask-Migrate==4.1.0
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.3
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jwt==1.4.0
 Mako==1.3.10
 MarkupSafe==3.0.2
 marshmallow==4.0.0
 mysqlclient==2.2.7
+pycparser==2.22
+PyJWT==2.10.1
 PyMySQL==1.1.1
 python-dotenv==1.1.0
 pytz==2025.2
