--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,6 @@ Flask-SQLAlchemy==3.1.1
 greenlet==3.2.3
 itsdangerous==2.2.0
 Jinja2==3.1.6
-jwt==1.4.0
 Mako==1.3.10
 MarkupSafe==3.0.2
 marshmallow==4.0.0
@@ -24,5 +23,6 @@ python-dotenv==1.1.0
 pytz==2025.2
 six==1.17.0
 SQLAlchemy==2.0.41
+tenacity==9.1.2
 typing_extensions==4.14.0
 Werkzeug==3.1.3
